Fix2 z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,12 @@ p.notification.show{
 	-webkit-transform: translateY(0%);
 }
 
-.contribution, .filters, .search, #lateral-navigation, #globalData {
-	z-index: 5;
-}
 /* Menu de navigation latéral gauche : Recherche de mot, ajout de mot, filtes */
-#lateral-navigation {
+.contribution, .filters, #lateral-navigation, #globalData {
+	z-index: 10;
 	position: relative;
+}
+#lateral-navigation {
 	width: 70px;
 }
 .widthauto { /* Pour le #lateral-navigation seulement au click */
@@ -127,7 +127,7 @@ p.notification.show{
 	justify-content: center;
 	height: 214px;
 }
-#searchInput {
+#search {
 	display: inline-block;
 	height: 60px;
 	padding: 15px 50px;
